# orphan-chain-explorer

./: .gitignore  JOURNAL.md  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: api.rs  chain.rs  main.rs  rpc.rs  ws.rs
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BlockNode.tsx  BlockPanel.tsx  ChainGraph.tsx  Controls.tsx  Explainer.tsx
frontend/lib/: api.ts  useChain.ts
